Fixed extra white space issue on Part1

--- a/project0/style.css
+++ b/project0/style.css
@@ -1,3 +1,32 @@
+html,
+body {
+  height: 100%;
+  margin: 0
+}
+
+.box {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+.box .row.header {
+  flex: 0 1 auto;
+  /* The above is shorthand for:
+  flex-grow: 0,
+  flex-shrink: 1,
+  flex-basis: auto
+  */
+}
+
+.box .row.content {
+  flex: 1 1 auto;
+}
+
+.box .row.footer {
+  flex: 0 1 40px;
+}
+
 h1 {
     margin: 0;
     padding: 5px;
@@ -17,4 +46,10 @@ h1 {
     position: relative;
     top: 0;
     left: 0;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
